# SquaredIoTScanner

./: .gitignore  CMakeLists.txt  LICENSE  Main.qml  README.md  main.cpp
android/: AndroidManifest.xml  build.gradle
android/src/com/example/barcodescanner/: BarcodeScanner.java  MainActivity.java
src/: androidbarcodescanner.cpp  androidbarcodescanner.h
